==> zephyrproject-rtos/hal_stm32/stm32cube/stm32h5xx/drivers/src/stm32h5xx_hal_comp.c <==
#include "stm32h5xx_hal.h"
#define COMP_DELAY_STARTUP_US          (80UL) /*!< Delay for COMP startup time */
#define COMP_DELAY_VOLTAGE_SCALER_STAB_US (200UL)  /*!< Delay for COMP voltage scaler stabilization time */

HAL_StatusTypeDef HAL_COMP_Init(COMP_HandleTypeDef *hcomp)
{
  uint32_t tmp_csr;
  uint32_t exti_line;
  uint32_t comp_voltage_scaler_initialized; /* Value "0" if comparator voltage scaler is not initialized */
  __IO uint32_t wait_loop_index = 0UL;
  HAL_StatusTypeDef status = HAL_OK;

  /* Check the COMP handle allocation and lock status */
  if (hcomp == NULL)
  {
    status = HAL_ERROR;
  }
  else if (__HAL_COMP_IS_LOCKED(hcomp))
  {
    status = HAL_ERROR;
  }
  else
  {
    /* Check the parameters */
    assert_param(IS_COMP_ALL_INSTANCE(hcomp->Instance));
    assert_param(IS_COMP_INPUT_PLUS(hcomp->Instance, hcomp->Init.InputPlus));
    assert_param(IS_COMP_INPUT_MINUS(hcomp->Instance, hcomp->Init.InputMinus));
    assert_param(IS_COMP_OUTPUTPOL(hcomp->Init.OutputPol));
    assert_param(IS_COMP_POWERMODE(hcomp->Init.Mode));
    assert_param(IS_COMP_HYSTERESIS(hcomp->Init.Hysteresis));
    assert_param(IS_COMP_BLANKINGSRCE(hcomp->Init.BlankingSrce));
    assert_param(IS_COMP_TRIGGERMODE(hcomp->Init.TriggerMode));
#if defined(COMP_WINDOW_MODE_SUPPORT)
    assert_param(IS_COMP_WINDOWMODE(hcomp->Init.WindowMode));
    if (hcomp->Init.WindowMode != COMP_WINDOWMODE_DISABLE)
    {
      assert_param(IS_COMP_WINDOWOUTPUT(hcomp->Init.WindowOutput));
    }
#endif /* COMP_WINDOW_MODE_SUPPORT */

    if (hcomp->State == HAL_COMP_STATE_RESET)
    {
      /* Allocate lock resource and initialize it */
      hcomp->Lock = HAL_UNLOCKED;

      /* Set COMP error code to none */
      COMP_CLEAR_ERRORCODE(hcomp);

#if defined(STM32H503xx)
      hcomp->InterruptAutoRearm = 0;
#endif /* STM32H503xx */

#if (USE_HAL_COMP_REGISTER_CALLBACKS == 1U)
      /* Init the COMP Callback settings */
      hcomp->TriggerCallback = HAL_COMP_TriggerCallback; /* Legacy weak callback */

      if (hcomp->MspInitCallback == NULL)
      {
        hcomp->MspInitCallback = HAL_COMP_MspInit; /* Legacy weak MspInit  */
      }

      /* Init the low level hardware */
      hcomp->MspInitCallback(hcomp);
#else
      /* Init the low level hardware */
      HAL_COMP_MspInit(hcomp);
#endif /* USE_HAL_COMP_REGISTER_CALLBACKS */
    }

    /* Memorize voltage scaler state before initialization */
    comp_voltage_scaler_initialized = READ_BIT(hcomp->Instance->CFGR1, COMP_CFGR1_SCALEN);

    /* Set COMP parameters */
#if defined(STM32H503xx)
    tmp_csr = (hcomp->Init.InputMinus
               | hcomp->Init.InputPlus
               | hcomp->Init.BlankingSrce
               | hcomp->Init.Hysteresis
               | hcomp->Init.OutputPol
               | hcomp->Init.Mode);
#else
    uint32_t input_minus = hcomp->Init.InputMinus;
    if (hcomp->Instance == COMP2)
    {
      /* Adapt value of input minus literal for COMP2 */
      if ((input_minus >= COMP_INPUT_MINUS_IO1) && (input_minus <= COMP_INPUT_MINUS_IO3))
      {
        input_minus += (1UL << COMP_CFGR1_INMSEL_Pos);
      }
    }

    tmp_csr = (input_minus
               | hcomp->Init.InputPlus
               | hcomp->Init.BlankingSrce
               | hcomp->Init.Hysteresis
               | hcomp->Init.OutputPol
               | hcomp->Init.Mode);
#endif /* STM32H503xx */

    /* Set parameters in COMP register */
    /* Note: Update all bits except read-only, lock and enable bits */
#if defined(STM32H503xx)
    MODIFY_REG(hcomp->Instance->CFGR1,
               COMP_CFGR1_PWRMODE | COMP_CFGR1_INMSEL | COMP_CFGR1_INPSEL1 | COMP_CFGR1_INPSEL2
               | COMP_CFGR1_POLARITY | COMP_CFGR1_HYST
               | COMP_CFGR1_BLANKING | COMP_CFGR1_BRGEN | COMP_CFGR1_SCALEN,
               tmp_csr
              );

    if (hcomp->Init.InputPlus == COMP_INPUT_PLUS_IO2)
    {
      MODIFY_REG(hcomp->Instance->CFGR2, COMP_CFGR2_INPSEL0, COMP_CFGR2_INPSEL0);
    }
#else
    MODIFY_REG(hcomp->Instance->CFGR1,
               COMP_CFGR1_PWRMODE | COMP_CFGR1_INMSEL | COMP_CFGR1_INPSEL0 | COMP_CFGR1_INPSEL1
               | COMP_CFGR1_POLARITY | COMP_CFGR1_HYST
               | COMP_CFGR1_BLANKING | COMP_CFGR1_BRGEN | COMP_CFGR1_SCALEN,
               tmp_csr
              );
#endif /* STM32H503xx */

#if defined(COMP_WINDOW_MODE_SUPPORT)
    /* Set window mode */
    /* Note: Window mode bit is located into 1 out of the 2 pairs of COMP     */
    /*       instances. Therefore, this function can update another COMP      */
    /*       instance that the one currently selected.                        */

    if (hcomp->Init.WindowMode == COMP_WINDOWMODE_COMP1_INPUT_PLUS_COMMON)
    {
      CLEAR_BIT(COMP12_COMMON->CFGR1_ODD, COMP_CFGR1_WINMODE);
      SET_BIT(COMP12_COMMON->CFGR1_EVEN, COMP_CFGR1_WINMODE);
    }
    else if (hcomp->Init.WindowMode == COMP_WINDOWMODE_COMP2_INPUT_PLUS_COMMON)
    {
      SET_BIT(COMP12_COMMON->CFGR1_ODD, COMP_CFGR1_WINMODE);
      CLEAR_BIT(COMP12_COMMON->CFGR1_EVEN, COMP_CFGR1_WINMODE);
    }
    else
    {
      CLEAR_BIT(COMP12_COMMON->CFGR1_ODD, COMP_CFGR1_WINMODE);
      CLEAR_BIT(COMP12_COMMON->CFGR1_EVEN, COMP_CFGR1_WINMODE);
    }

    /* Set window mode output */
    /* Note: Window mode mode output can also be used when window mode        */
    /*       is disabled, to use comparators in independent mode with their   */
    /*       output connected through exclusive-or circuitry.                 */
    switch (hcomp->Init.WindowOutput)
    {
      case COMP_WINDOWOUTPUT_COMP1:
        SET_BIT(COMP12_COMMON->CFGR1_ODD, COMP_CFGR1_WINOUT);
        CLEAR_BIT(COMP12_COMMON->CFGR1_EVEN, COMP_CFGR1_WINOUT);
        break;

      case COMP_WINDOWOUTPUT_COMP2:
        CLEAR_BIT(COMP12_COMMON->CFGR1_ODD, COMP_CFGR1_WINOUT);
        SET_BIT(COMP12_COMMON->CFGR1_EVEN, COMP_CFGR1_WINOUT);
        break;

      case COMP_WINDOWOUTPUT_BOTH:
        SET_BIT(COMP12_COMMON->CFGR1_ODD, COMP_CFGR1_WINOUT);
        SET_BIT(COMP12_COMMON->CFGR1_EVEN, COMP_CFGR1_WINOUT);
        break;

      default: /* COMP_WINDOWOUTPUT_EACH_COMP */
        CLEAR_BIT(COMP12_COMMON->CFGR1_ODD, COMP_CFGR1_WINOUT);
        CLEAR_BIT(COMP12_COMMON->CFGR1_EVEN, COMP_CFGR1_WINOUT);
        break;
    }
#endif /* COMP_WINDOW_MODE_SUPPORT */

    /* Delay for COMP scaler bridge voltage stabilization */
    /* Apply the delay if voltage scaler bridge is enabled for the first time */
    if ((READ_BIT(hcomp->Instance->CFGR1, COMP_CFGR1_SCALEN) != 0UL) &&
        (comp_voltage_scaler_initialized != 0UL))
    {
      /* Wait loop initialization and execution */
      /* Note: Variable divided by 2 to compensate partially              */
      /*       CPU processing cycles, scaling in us split to not          */
      /*       exceed 32 bits register capacity and handle low frequency. */
      wait_loop_index = ((COMP_DELAY_VOLTAGE_SCALER_STAB_US / 10UL) * ((SystemCoreClock / (100000UL * 2UL)) + 1UL));
      while (wait_loop_index != 0UL)
      {
        wait_loop_index--;
      }
    }

    /* Get the EXTI line corresponding to the selected COMP instance */
    exti_line = COMP_GET_EXTI_LINE(hcomp->Instance);

    /* Manage EXTI settings */
#if defined(STM32H503xx)
    if ((hcomp->Init.TriggerMode & COMP_EXTI_IT) != 0UL)
    {
      LL_EXTI_EnableIT_0_31(exti_line);
    }
    else
    {
      LL_EXTI_DisableIT_0_31(exti_line);
    }
#else
    if ((hcomp->Init.TriggerMode & (COMP_EXTI_IT | COMP_EXTI_EVENT)) != 0UL)
    {
      /* Configure EXTI rising edge */
      if ((hcomp->Init.TriggerMode & COMP_EXTI_RISING) != 0UL)
      {
        LL_EXTI_EnableRisingTrig_32_63(exti_line);
      }
      else
      {
        LL_EXTI_DisableRisingTrig_32_63(exti_line);
      }

      /* Configure EXTI falling edge */
      if ((hcomp->Init.TriggerMode & COMP_EXTI_FALLING) != 0UL)
      {
        LL_EXTI_EnableFallingTrig_32_63(exti_line);
      }
      else
      {
        LL_EXTI_DisableFallingTrig_32_63(exti_line);
      }

      /* Clear COMP EXTI pending bit (if any) */
      LL_EXTI_ClearRisingFlag_32_63(exti_line);
      LL_EXTI_ClearFallingFlag_32_63(exti_line);

      /* Configure EXTI event mode */
      if ((hcomp->Init.TriggerMode & COMP_EXTI_EVENT) != 0UL)
      {
        LL_EXTI_EnableEvent_32_63(exti_line);
      }
      else
      {
        LL_EXTI_DisableEvent_32_63(exti_line);
      }

      /* Configure EXTI interrupt mode */
      if ((hcomp->Init.TriggerMode & COMP_EXTI_IT) != 0UL)
      {
        LL_EXTI_EnableIT_32_63(exti_line);
      }
      else
      {
        LL_EXTI_DisableIT_32_63(exti_line);
      }
    }
    else
    {
      /* Disable EXTI interrupt and event mode */
      LL_EXTI_DisableEvent_32_63(exti_line);
      LL_EXTI_DisableIT_32_63(exti_line);
    }
#endif /* STM32H503xx */

    /* Set HAL COMP handle state */
    /* Note: Transition from state reset to state ready,                      */
    /*       otherwise (coming from state ready or busy) no state update.     */
    if (hcomp->State == HAL_COMP_STATE_RESET)
    {
      hcomp->State = HAL_COMP_STATE_READY;
    }
  }

  return status;
}

HAL_StatusTypeDef HAL_COMP_Start(COMP_HandleTypeDef *hcomp)
{
  __IO uint32_t wait_loop_index = 0UL;

  HAL_StatusTypeDef status = HAL_OK;

  /* Check the COMP handle allocation and lock status */
  if (hcomp == NULL)
  {
    status = HAL_ERROR;
  }
  else if (__HAL_COMP_IS_LOCKED(hcomp))
  {
    status = HAL_ERROR;
  }
  else
  {
    /* Check the parameter */
    assert_param(IS_COMP_ALL_INSTANCE(hcomp->Instance));

#if defined(STM32H503xx)
    if ((hcomp->Init.TriggerMode & COMP_EXTI_IT) != 0UL)
    {
      /* Case of operation with interruption */
      /* Note: Specific to comparator of STM32H503xx device featuring IT with direct line only
               (low latency, detection on level) */
      status = HAL_COMP_Start_IT_AutoRearm(hcomp);
    }
    else
#endif /* STM32H503xx */
    {
      if (hcomp->State == HAL_COMP_STATE_READY)
      {
        /* Enable the selected comparator */
        SET_BIT(hcomp->Instance->CFGR1, COMP_CFGR1_EN);

        /* Set HAL COMP handle state */
        hcomp->State = HAL_COMP_STATE_BUSY;

        /* Delay for COMP startup time */
        /* Wait loop initialization and execution */
        /* Note: Variable divided by 2 to compensate partially              */
        /*       CPU processing cycles, scaling in us split to not          */
        /*       exceed 32 bits register capacity and handle low frequency. */
        wait_loop_index = ((COMP_DELAY_STARTUP_US / 10UL) * ((SystemCoreClock / (100000UL * 2UL)) + 1UL));
        while (wait_loop_index != 0UL)
        {
          wait_loop_index--;
        }
      }
      else
      {
        status = HAL_ERROR;
      }
    }
  }

  return status;
}

HAL_StatusTypeDef HAL_COMP_Stop(COMP_HandleTypeDef *hcomp)
{
  HAL_StatusTypeDef status = HAL_OK;

  /* Check the COMP handle allocation and lock status */
  if (hcomp == NULL)
  {
    status = HAL_ERROR;
  }
  else if (__HAL_COMP_IS_LOCKED(hcomp))
  {
    status = HAL_ERROR;
  }
  else
  {
    /* Check the parameter */
    assert_param(IS_COMP_ALL_INSTANCE(hcomp->Instance));

    /* Check compliant states: HAL_COMP_STATE_READY or HAL_COMP_STATE_BUSY    */
    /* (all states except HAL_COMP_STATE_RESET and except locked status.      */
    if (hcomp->State != HAL_COMP_STATE_RESET)
    {
      /* Disable the selected comparator */
      CLEAR_BIT(hcomp->Instance->CFGR1, COMP_CFGR1_EN);

      /* Set HAL COMP handle state */
      hcomp->State = HAL_COMP_STATE_READY;
    }
    else
    {
      status = HAL_ERROR;
    }
  }

  return status;
}

void HAL_COMP_IRQHandler(COMP_HandleTypeDef *hcomp)
{
#if defined(STM32H503xx)
  uint32_t polarity_toggle = 0U;

  /* Disable COMP interrupt */
  /* Note: Specific to comparator of this STM32 series: comparator output triggers interruption on high level. */
  __HAL_COMP_DISABLE_IT(hcomp, COMP_IT_EN);

  /* Clear COMP1 interrupt flag */
  __HAL_COMP_CLEAR_C1IFLAG();
#if defined(STM32H503xx)
  NVIC_ClearPendingIRQ(COMP1_IRQn);
#else
  NVIC_ClearPendingIRQ(COMP_IRQn);
#endif /* defined(STM32H503xx) */

  /* COMP trigger callback */
#if (USE_HAL_COMP_REGISTER_CALLBACKS == 1U)
  hcomp->TriggerCallback(hcomp);
#else
  HAL_COMP_TriggerCallback(hcomp);
#endif /* USE_HAL_COMP_REGISTER_CALLBACKS */

  if (hcomp->InterruptAutoRearm == 1U)
  {
    /* Check whether initial comparator output level is compliant with interruption mode */
    if (hcomp->Init.TriggerMode == COMP_EXTI_FALLING)
    {
      if (HAL_COMP_GetOutputLevel(hcomp) != COMP_OUTPUT_LEVEL_HIGH)
      {
        polarity_toggle = 1U;
      }
    }
    else /* COMP_EXTI_RISING */
    {
      if (HAL_COMP_GetOutputLevel(hcomp) != COMP_OUTPUT_LEVEL_LOW)
      {
        polarity_toggle = 1U;
      }
    }

    if (polarity_toggle == 1U)
    {
      /* Toggle poarity */
      if (READ_BIT(hcomp->Instance->CFGR1, COMP_CFGR1_POLARITY) == 0UL)
      {
        SET_BIT(hcomp->Instance->CFGR1, COMP_CFGR1_POLARITY);
      }
      else
      {
        CLEAR_BIT(hcomp->Instance->CFGR1, COMP_CFGR1_POLARITY);
      }
    }

    /* Enable COMP interrupt */
    __HAL_COMP_ENABLE_IT(hcomp, COMP_IT_EN);
  }
  else
  {
    /* Change COMP state */
    hcomp->State = HAL_COMP_STATE_READY;
  }

#else /* STM32H5Ex/STM32H5Fx */
  /* Get the EXTI line corresponding to the selected COMP instance */
  uint32_t exti_line = COMP_GET_EXTI_LINE(hcomp->Instance);
#if defined(COMP_WINDOW_MODE_SUPPORT)
  uint32_t comparator_window_mode = READ_BIT(hcomp->Instance->CFGR1, COMP_CFGR1_WINMODE);
#endif /* COMP_WINDOW_MODE_SUPPORT */

  /* Check COMP EXTI flag */
  if (LL_EXTI_IsActiveRisingFlag_32_63(exti_line) != 0UL)
  {
#if defined(COMP_WINDOW_MODE_SUPPORT)
    /* Check whether comparator is in independent or window mode */
    if (comparator_window_mode != 0UL)
    {
      /* Clear COMP EXTI line pending bit of the pair of comparators          */
      /* in window mode.                                                      */
      /* Note: Pair of comparators in window mode can both trig IRQ when      */
      /*       input voltage is changing from "out of window" area            */
      /*       (low or high ) to the other "out of window" area (high or low).*/
      /*       Both flags must be cleared to call comparator trigger          */
      /*       callback is called once.                                       */
      WRITE_REG(EXTI->RPR2, (COMP_EXTI_LINE_COMP1 | COMP_EXTI_LINE_COMP2));
    }
    else
#endif /* COMP_WINDOW_MODE_SUPPORT */
    {
      /* Clear COMP EXTI line pending bit */
      WRITE_REG(EXTI->RPR2, exti_line);
    }

    /* COMP trigger user callback */
#if (USE_HAL_COMP_REGISTER_CALLBACKS == 1)
    hcomp->TriggerCallback(hcomp);
#else
    HAL_COMP_TriggerCallback(hcomp);
#endif /* USE_HAL_COMP_REGISTER_CALLBACKS */
  }
  else if (LL_EXTI_IsActiveFallingFlag_32_63(exti_line) != 0UL)
  {
#if defined(COMP_WINDOW_MODE_SUPPORT)
    /* Check whether comparator is in independent or window mode */
    if (comparator_window_mode != 0UL)
    {
      /* Clear COMP EXTI line pending bit of the pair of comparators          */
      /* in window mode.                                                      */
      /* Note: Pair of comparators in window mode can both trig IRQ when      */
      /*       input voltage is changing from "out of window" area            */
      /*       (low or high ) to the other "out of window" area (high or low).*/
      /*       Both flags must be cleared to call comparator trigger          */
      /*       callback is called once.                                       */
      WRITE_REG(EXTI->FPR2, (COMP_EXTI_LINE_COMP1 | COMP_EXTI_LINE_COMP2));
    }
    else
#endif /* COMP_WINDOW_MODE_SUPPORT */
    {
      /* Clear COMP EXTI line pending bit */
      WRITE_REG(EXTI->FPR2, exti_line);
    }

    /* COMP trigger user callback */
#if (USE_HAL_COMP_REGISTER_CALLBACKS == 1)
    hcomp->TriggerCallback(hcomp);
#else
    HAL_COMP_TriggerCallback(hcomp);
#endif /* USE_HAL_COMP_REGISTER_CALLBACKS */
  }
  else
  {
    /* nothing to do */
  }
#endif /* STM32H503xx */
}

uint32_t HAL_COMP_GetOutputLevel(const COMP_HandleTypeDef *hcomp)
{
  /* Check the parameter */
  assert_param(IS_COMP_ALL_INSTANCE(hcomp->Instance));
#if defined(STM32H503xx)
  return (uint32_t)(READ_BIT(COMP1->SR, COMP_SR_C1VAL));
#else
  if (hcomp->Instance == COMP1)
  {
    return (uint32_t)(READ_BIT(COMP12->SR, COMP_SR_C1VAL));
  }
  else
  {
    return (uint32_t)((READ_BIT(COMP12->SR, COMP_SR_C2VAL))>> 1UL);
  }
#endif /* STM32H503xx */
}
